--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-midnight
 title: RishabhL | My Website
 description: A website, currently under developement; IN TESTING
+github_username: RishabhL
